--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,7 +21,7 @@ package = 'parity-scale-codec'
 version = '2.0.0'
 
 [dependencies]
-hex-literal = { optional = true, version = '0.3.1' }
+hex-literal = { optional = false, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 # local dependencies
@@ -57,7 +57,6 @@ sp-version = { default-features = false, version = '3.0.0' }
 [features]
 default = ['std']
 runtime-benchmarks = [
-    'hex-literal',
     'frame-benchmarking',
     'frame-support/runtime-benchmarks',
     'frame-system-benchmarking',
