--- a/pallets/swap/Cargo.toml
+++ b/pallets/swap/Cargo.toml
@@ -22,6 +22,7 @@ version = '2.0.0'
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 sp-core = { default-features = false, version = '3.0.0' }
+sha2 = { default-features = false, version = '0.9.5' }
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
