--- a/pallets/swap/Cargo.toml
+++ b/pallets/swap/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['delphinus-lab']
 description = 'core swap runtime logic.'
 edition = '2018'
-homepage = 'https://substrate.dev'
+homepage = 'https://delphinuslab.com/'
 license = 'Unlicense'
 name = 'pallet-swap'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '3.0.0'
+repository = 'https://github.com/ZhenXunGe/delphinus-substrate-node'
+version = '1.0.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -23,6 +23,8 @@ frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 sp-core = { default-features = false, version = '3.0.0' }
 sha2 = { default-features = false, version = '0.9.5' }
+delphinus-crypto = { path = '../../../delphinus-crypto-rust', default-features = false }
+num-bigint = { version = "0.4", features = ["rand"], default-features = false }
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
