--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
-version: "3.2"
-
+version: "3.9"
 services:
-  dev:
-    container_name: node-template
-    image: paritytech/ci-linux:974ba3ac-20201006
-    working_dir: /var/www/node-template
+  node:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    networks:
+      - zhenxunge-node
     ports:
       - "9944:9944"
-    environment:
-      - CARGO_HOME=/var/www/node-template/.cargo
     volumes:
-      - .:/var/www/node-template
-      - type: bind
-        source: ./.local
-        target: /root/.local
-    command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external"
+      - zhenxunge-node-data:/data
+    deploy:
+      restart_policy:
+        condition: on-failure
+        max_attempts: 10
+
+networks:
+  zhenxunge-node:
+
+volumes:
+  zhenxunge-node-data:
