add caddy to docker compose for easier tls management

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,10 +5,12 @@
 
 # Github
 .github
+/deploy/
 
 # Docker
 Dockerfile
 docker-compose.yml
+docker-compose.dev.yml
 .dockerignore
 
 # Documentation
