--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
-version: "3.9"
+version: "3.7"
 services:
-  node:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  caddy:
+    image: lucaslorentz/caddy-docker-proxy:ci-alpine
+    ports:
+      - 80:80
+      - 443:443
+    environment:
+      - CADDY_INGRESS_NETWORKS=caddy
     networks:
-      - zhenxunge-node
+      - caddy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - caddy-data:/data
+    restart: unless-stopped
+
+  node:
+    labels:
+      caddy.reverse_proxy: "{{upstreams 9944}}"
+    image: zhenxunge-node
+    networks:
+      - caddy
     ports:
       - "9944:9944"
     volumes:
       - zhenxunge-node-data:/data
-    deploy:
-      restart_policy:
-        condition: on-failure
-        max_attempts: 10
+    restart: unless-stopped
 
 networks:
-  zhenxunge-node:
+  caddy:
 
 volumes:
   zhenxunge-node-data:
+  caddy-data:
