--- a/pallets/swap/Cargo.toml
+++ b/pallets/swap/Cargo.toml
@@ -23,6 +23,8 @@ frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 sp-core = { default-features = false, version = '3.0.0' }
 sha2 = { default-features = false, version = '0.9.5' }
+frame-benchmarking = {version = '3.1.0', default-features = false, optional = true}
+sp-std = {default-features = false, version = '3.0.0'}
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
@@ -34,5 +36,8 @@ default = ['std']
 std = [
     'codec/std',
     'frame-support/std',
-    'frame-system/std'
+    'frame-system/std',
+    'frame-benchmarking/std',
+    'sp-std/std',
 ]
+runtime-benchmarks = ["frame-benchmarking"]
