--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -64,6 +64,7 @@ runtime-benchmarks = [
     'pallet-balances/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
     'sp-runtime/runtime-benchmarks',
+    'pallet-swap/runtime-benchmarks',
 ]
 std = [
     'codec/std',
