--- a/pallets/swap/Cargo.toml
+++ b/pallets/swap/Cargo.toml
@@ -25,6 +25,7 @@ sp-core = { default-features = false, version = '3.0.0' }
 sha2 = { default-features = false, version = '0.9.5' }
 delphinus-crypto = { path = '../../../crypto-rust/substrate', default-features = false }
 num-bigint = { version = "0.4", features = ["rand"], default-features = false }
+serde_json = "1.0"
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
